--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="proposal-content" class="hidden">
             <h1 id="question">Will you be my Valentine?</h1>
             <div class="gif-container">
-                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHYyYm9uOHp5eGZqZnd4eHh4eHh4eHh4eHh4eHh4eHh4eHh4JnBvcz1jJmxlPTU/c7kaO8L21N0E7mYlY9/giphy.gif" alt="Cute gif">
+                <img id="main-gif" src="dance_dog.gif" alt="Cute gif">
             </div>
             
             <div class="btn-group">
@@ -34,9 +34,10 @@
 
         <div id="success-message" class="hidden">
             <h1 class="dancing-script">Yay! I love you! ❤️</h1>
-            <p>See you on February 14th!</p>
+            <p>I miss you Deja</p>
         </div>
-    </div>
+        
+        </div>
 
     <script src="script.js"></script>
 </body>
